fix btn_send overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -869,7 +869,7 @@ input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-sea
   border: none;
   color: #fff;
   width: 60px;
-  height: 50px;
+  height: 45px;
   background: #00CEFF;
   border-radius: 12px 0;
   text-transform: uppercase;
